k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintech-service
  labels:
    app: fintech-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: fintech-app
